Finishing touches on 1.2.0

--- a/PolyMCPortable/help.html
+++ b/PolyMCPortable/help.html
@@ -218,7 +218,8 @@
 		<h2 class="tagline">Minecraft Launcher</h2>
 
 		<p><img src="App\AppInfo\appicon_128.png" width="128" height="128" style="float:right;">PolyMC Portable is
-			an Open Source Minecraft launcher. It's packaged with a PortableApps.com launcher as a <a
+			an Open Source Minecraft launcher with the ability to manage multiple instances, accounts and mods.
+			It's packaged with a PortableApps.com launcher as a <a
 				href="https://portableapps.com/about/what_is_a_portable_app">portable app</a>, so you can use it from a
 			cloud folder, portable drive, or local folder without needing to install it on each PC. <a
 				href="https://polymc.org/">Learn more about PolyMC...</a></p>
@@ -227,7 +228,7 @@
 					style="vertical-align:middle" alt="Make a Donation"></a> - Support PortableApps.com's Hosting and
 			Development</p>
 
-		<!-- <p><a href="https://portableapps.com/node/*Node ID*">Go to the **App Name** Portable Homepage &gt;&gt;</a></p> -->
+		<p><a href="https://FayneAldan.github.io/PolyMCPortable/">Go to the PolyMC Portable Homepage &gt;&gt;</a></p>
 
 		<p><a href="https://portableapps.com/">Get more portable apps at PortableApps.com</a></p>
 
