Rebrand to Prism Launcher Portable

--- a/PrismLauncherPortable/help.html
+++ b/PrismLauncherPortable/help.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="UTF-8">
-	<title>PolyMC Portable Help</title>
+	<title>Prism Launcher Portable Help</title>
 	<link rel="alternate" href="https://portableapps.com/feeds/general" type="application/rss+xml"
 		title="PortableApps.com">
 	<link rel="shortcut icon" href="Other/Help/Images/Favicon.ico">
@@ -213,22 +213,22 @@
 	<div class="logo"><a href="https://portableapps.com/"><img src="Other/Help/Images/Help_Logo_Top.png"
 				alt="PortableApps.com - Your Digital Life, Anywhere"></a></div>
 	<div class="content">
-		<h1 class="hastagline">PolyMC Portable Help</h1>
+		<h1 class="hastagline">Prism Launcher Portable Help</h1>
 
 		<h2 class="tagline">Minecraft Launcher</h2>
 
-		<p><img src="App\AppInfo\appicon_128.png" width="128" height="128" style="float:right;">PolyMC Portable is
+		<p><img src="App\AppInfo\appicon_128.png" width="128" height="128" style="float:right;">Prism Launcher Portable is
 			an Open Source Minecraft launcher with the ability to manage multiple instances, accounts and mods.
 			It's packaged with a PortableApps.com launcher as a <a
 				href="https://portableapps.com/about/what_is_a_portable_app">portable app</a>, so you can use it from a
 			cloud folder, portable drive, or local folder without needing to install it on each PC. <a
-				href="https://polymc.org/">Learn more about PolyMC...</a></p>
+				href="https://prismlauncher.org/">Learn more about Prism Launcher...</a></p>
 
 		<p><a href="https://portableapps.com/donate"><img src="Other/Help/Images/Donation_Button.png"
 					style="vertical-align:middle" alt="Make a Donation"></a> - Support PortableApps.com's Hosting and
 			Development</p>
 
-		<p><a href="https://FayneAldan.github.io/PolyMCPortable/">Go to the PolyMC Portable Homepage &gt;&gt;</a></p>
+		<p><a href="https://FayneAldan.github.io/PrismLauncherPortable/">Go to the Prism Launcher Portable Homepage &gt;&gt;</a></p>
 
 		<p><a href="https://portableapps.com/">Get more portable apps at PortableApps.com</a></p>
 
