--- a/PrismLauncherPortable/help.html
+++ b/PrismLauncherPortable/help.html
@@ -133,7 +133,7 @@
 
 <p><a href="https://portableapps.com/donate"><img src="Other/Help/Images/Donation_Button.png" style="vertical-align:middle" alt="Make a Donation"></a> - Support PortableApps.com's Hosting and Development</p>
 
-<p><a href="https://ruintd.github.io/PrismLauncherPortable/">Go to the Prism Launcher Portable Homepage &gt;&gt;</a></p>
+<p><a href="https://portableapps.com/node/68588">Go to the Prism Launcher Portable Homepage &gt;&gt;</a></p>
 
 <p><a href="https://portableapps.com/">Get more portable apps at PortableApps.com</a></p>
 
